# Labels-On-Tap

./: .dockerignore  .env.example  .gitignore  APP_USE_INSTRUCTIONS.md  ARCHITECTURE.md  Caddyfile  DEMO_SCRIPT.md  Dockerfile  FINAL_HANDOFF_2026-05-05.md  HANDOFF.md  HANDOFF_DETAILED_2026-05-03.md  MODEL_ARCHITECTURE.md  MODEL_LOG.md  PERSONALITIES.md  PHASE1_REJECTION.md  PRD.md  README.md  TASKS.md  TRADEOFFS.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
docs/: accessibility.md  data-strategy.md  deployment.md  fixture-generation.md  ocr-conveyor.md  performance.md  public-cola-etl.md  research-summary.md  security-and-privacy.md  tradeoffs.md  validation-rules.md
scripts/: audit_public_cola_images.py  bootstrap_legal_corpus.py  bootstrap_project.py  build_field_support_dataset.py  cleanup_jobs.py  create_colacloud_evaluation_splits.py  create_curated_public_cola_demo_pack.py  create_public_cola_demo_upload_pack.py  download_public_cola_images.py  evaluate_public_cola_ocr.py  export_public_cola_attachment_links.py  export_public_cola_fixtures.py  fetch_public_cola_forms.py  fetch_public_cola_search_results.py  import_colacloud_sample_pack.py  import_manual_public_cola_images.py  import_public_cola_search_results.py  init_public_cola_workspace.py  parse_public_cola_forms.py  plan_public_cola_sample.py  pull_colacloud_api_corpus.py  run_colacloud_stratified_sample.py  run_ocr_conveyor.py  run_public_cola_sampling_job.py  seed_demo_fixtures.py  select_public_cola_sample.py  validate_legal_corpus.py  warm_ocr.py
(+192 files in other folders)
