[project]
name = "labels-on-tap"
version = "0.1.0"
description = "Local-first alcohol label preflight prototype for COLA-style application review."
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
